--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -316,6 +316,14 @@ tbody tr:hover {
 
 select.form-control {
     cursor: pointer;
+    height: 38px;
+    min-height: 38px;
+    -webkit-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%236b7280' d='M3 4.5L6 7.5L9 4.5'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 0.75rem center;
+    padding-right: 2rem;
 }
 
 /* ===== Section Card ===== */
